@@ -33,9 +33,6 @@ public option jedit_structure_limit : int = 1000
 public option jedit_symbols_search_limit : int = 50
   -- "maximum number of symbols in search result"
 
-public option jedit_timing_threshold : real = 0.1
-  -- "default threshold for timing display (seconds)"
-
 public option jedit_text_overview : bool = true
   -- "paint text overview column"
 
